fix: update notification
